# curseforgepy

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
src/curseforgepy/: __init__.py  client.py  dataTypes.py  download.py  exceptions.py  fileops.py  installer.py  paths.py  types_models.py  utils.py
