[project]
name = "CurseForgePy"
version = "0.1"
description = "Curseforge is an open source library created to use the API!"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "Curseforge",
  "Curseforge API",
  "Minecraft",
  "Mods",
  "Mod API",
  "Game modding",
  "Mod downloader",
  "Mod manager",
  "Cavanshirpro",
  "YoungLion","Young Lion","CurseForgePy"
]
license = { text = "MIT" }
authors = [
  { name = "Cavanşir Qurbanzadə", email = "cavanshirpro@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries"
]

# runtime dependencies
dependencies = [
  "requests>=2.28"
]

[project.urls]
Homepage = "https://github.com/Cavanshirpro/curseforgepy"
Repository = "https://github.com/Cavanshirpro/curseforgepy"
"Bug Tracker" = "https://github.com/Cavanshirpro/curseforgepy/issues"

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"